# esame-16062020-SebastianoTaddei

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Corso.h  Dipendente.h  Docente.h  Laurea.h  Lezione.h  Studente.h
src/: Corso.cpp  Docente.cpp  Laurea.cpp  Lezione.cpp  Studente.cpp
