cmake_minimum_required(VERSION 3.16)
project(esame_16062020_SebastianoTaddei)

set(CMAKE_CXX_STANDARD 17)

add_executable(esame_16062020_SebastianoTaddei main.cpp include/Dipendente.h src/Studente.cpp include/Studente.h src/Docente.cpp include/Docente.h src/Corso.cpp include/Corso.h src/Lezione.cpp include/Lezione.h src/Laurea.cpp include/Laurea.h)